# revised-ghostshell

./: CMakeLists.txt  README.md
include/: authGroup.h  constant.h  encoding.h  generalTools.h  ghostshell.h  irisEncoding.h  mac.h  match.h  matching.h  msgEncoding.h  otm.h  utilities.h
src/: authGroup.cpp  generalTools.cpp  ghostshell.cpp  irisEncoding.cpp  mac.cpp  match.cpp  matching.cpp  msgEncoding.cpp  otm.cpp  utilities.cpp
test/: diffPrimeTest.cpp  ghostshellTest.cpp  macTest.cpp  matchingTest.cpp  otmTest.cpp  polyTest.cpp
